--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -697,5 +697,7 @@
     background: rgba(0, 18, 184, 0.6); }
   .theme-dark .home-banner-sec .home-banner-cover .banner-card-wapper .banner-num-card {
     border: 1px solid #13174A; }
+  .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item .icon img {
+    filter: grayscale(1) brightness(4); }
 
 /*# sourceMappingURL=dark-theme.css.map */
