--- a/css/modal.css
+++ b/css/modal.css
@@ -22,6 +22,17 @@
       max-width: 1050px; }
     .custom-modal .modal-sm {
       max-width: 450px; } }
+  .custom-modal .aptos-btn-block {
+    display: flex;
+    justify-content: center; }
+    @media (max-width: 991px) {
+      .custom-modal .aptos-btn-block {
+        flex-wrap: wrap; } }
+    .custom-modal .aptos-btn-block button {
+      margin-top: 17px; }
+      @media (max-width: 991px) {
+        .custom-modal .aptos-btn-block button.btn-border {
+          margin-top: 0; } }
   .custom-modal .modal-info-cover .modal-info-block {
     background-color: #FFF6E1;
     color: #85744C;
