--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -397,7 +397,8 @@
       color: #697F9B;
       font-size: 12px;
       padding: 5px 7px;
-      width: 60px; }
+      width: 60px;
+      min-width: max-content; }
   .table-pagination-cover .entries-block {
     color: #697F9B;
     font-size: 12px; }
