--- a/css/table.css
+++ b/css/table.css
@@ -107,7 +107,8 @@
       color: #8393BA;
       font-size: 12px;
       padding: 5px 7px;
-      width: 60px; }
+      width: 60px;
+      min-width: max-content; }
   .table-pagination-cover .entries-block {
     color: #8393BA;
     font-size: 12px; }
