--- a/scss/table.scss
+++ b/scss/table.scss
@@ -131,6 +131,7 @@
             font-size: 12px;
             padding: 5px 7px;
             width: 60px;
+            min-width: max-content;
         }
     }
     .entries-block{
