--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1064,4 +1064,7 @@ $dark-block-2: #2B2C2E;
     .header-wrapper .right-block .notify-dropdown .dropdown-menu .dropdown-item .icon img{
         filter: grayscale(1) brightness(4);
     }
+    .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-icon img{
+        filter: grayscale(1) invert(1) brightness(1);
+    }
 }
