--- a/css/about-props.css
+++ b/css/about-props.css
@@ -1766,7 +1766,7 @@
           width: 40px;
           margin-bottom: 20px; } }
     .section-tokenomics .token-slider-wrp .slick-dots {
-      display: flex; }
+      display: flex !important; }
       @media (max-width: 1199px) {
         .section-tokenomics .token-slider-wrp .slick-dots {
           bottom: -15px; } }
