--- a/scss/home-dark.scss
+++ b/scss/home-dark.scss
@@ -431,7 +431,7 @@
 .theme-dark {
     .news-sec .news-sec-cover {
         border: 1px solid #1D2066;
-        background: linear-gradient(180deg, #111348 0%, #000 100%);
+        background: linear-gradient(180deg, #092E63 0%, #0C0D30 100%);
     }
 
     .news-sec .news-sec-cover .content-block h2,
