--- a/css/home-dark.css
+++ b/css/home-dark.css
@@ -199,7 +199,7 @@
 
 .theme-dark .news-sec .news-sec-cover {
   border: 1px solid #1D2066;
-  background: linear-gradient(180deg, #111348 0%, #000 100%); }
+  background: linear-gradient(180deg, #092E63 0%, #0C0D30 100%); }
 .theme-dark .news-sec .news-sec-cover .content-block h2,
 .theme-dark .utility-sec .title-block h2,
 .theme-dark .utility-sec .title-block p,
