--- a/scss/about-props.scss
+++ b/scss/about-props.scss
@@ -1581,6 +1581,7 @@
         @media (max-width:370px){
             flex-direction: column;
             align-items: flex-start;
+            align-items: center;
         }
         .article-link{
             font-size: 18px;
@@ -1608,6 +1609,11 @@
                 font-size: 14px;
                 line-height: 24px;
        
+            }
+            @media (max-width:370px){
+                margin-left: 0;
+                margin-right: 0;
+                margin-top: 5px;
             }
 
 
@@ -1793,6 +1799,16 @@
     }
     @media ($sm-767){
         padding-bottom: 10px;
+    }
+    &.floating-icon-left:before {
+        right: -7.55vw;
+        left: auto;
+        top: 35px;
+        aspect-ratio: 0.982;
+        @media ($sm-767){
+            top: 35px;
+            right: -16.55vw;
+        }
     }
     .title{
         font-size: 40px;
@@ -2153,6 +2169,11 @@
             position: relative;
             z-index: 1;
             height: 100%;
+            .slick-slide{
+                @media ($sm-767){
+                    padding-bottom: 25px;
+                }
+            }
         }
         .token-slider-ico{
             width: 84px;
