--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -701,5 +701,7 @@
     filter: grayscale(1) brightness(4); }
   .theme-dark .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-icon img {
     filter: grayscale(1) invert(1) brightness(1); }
+  .theme-dark .ant-picker-dropdown .ant-picker-header {
+    color: #fff !important; }
 
 /*# sourceMappingURL=dark-theme.css.map */
