--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1067,4 +1067,7 @@ $dark-block-2: #2B2C2E;
     .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-icon img{
         filter: grayscale(1) invert(1) brightness(1);
     }
+    .ant-picker-dropdown .ant-picker-header {
+        color: #fff !important;
+    }
 }
