--- a/css/common.css
+++ b/css/common.css
@@ -750,4 +750,13 @@ button {
     max-width: fit-content !important;
     padding-top: 0 !important; } }
 
+.table-no-data {
+  min-height: 60vh; }
+  @media (max-width: 991px) {
+    .table-no-data {
+      min-height: 50vh; } }
+  @media (max-width: 579px) {
+    .table-no-data {
+      min-height: 40vh; } }
+
 /*# sourceMappingURL=common.css.map */
