--- a/scss/common.scss
+++ b/scss/common.scss
@@ -926,7 +926,7 @@ button{
         }
     }
 }
-.table-no-data{
+.table-no-data-h{
     min-height: 60vh;
     @media($sm-991){
         min-height: 50vh;
