--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1070,4 +1070,7 @@ $dark-block-2: #2B2C2E;
     .ant-picker-dropdown .ant-picker-header {
         color: #fff !important;
     }
+    .action-btn-highlight:after{
+        border-color: #5D972E;
+    }
 }
