--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -13,7 +13,7 @@ $table-th: #1A1A1B;
 $table-bodrer: #242424;
 // Font stack
 //––––––––––––––––––––––––––––––––––––––––––––––––––
-$font-primary: 'Poppins', sans-serif;
+$font-primary: 'Poppins';
 
 // The base body size
 //––––––––––––––––––––––––––––––––––––––––––––––––––
