--- a/css/modal.css
+++ b/css/modal.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("../../fonts/fonts.css");
 /*** all Mobile Screen (iphone 6,7,8) ***/
 /*** mobile Landscape Size ***/
 /*** medium devices (tablets, less than 992px) ***/
@@ -14,7 +14,7 @@
   opacity: 1; }
 
 .custom-modal {
-  font-family: "Poppins", sans-serif; }
+  font-family: "Poppins"; }
   @media (min-width: 1200px) {
     .custom-modal .modal-xl {
       max-width: 895px; }
@@ -147,7 +147,7 @@
     .custom-modal .inp-block-modal .form-label {
       color: #697F9B;
       font-size: 14px;
-      font-family: "Poppins", sans-serif;
+      font-family: "Poppins";
       font-weight: 400;
       margin-bottom: 5px;
       display: block; }
@@ -254,7 +254,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      font: 500 16px/22px "Poppins", sans-serif;
+      font: 500 16px/22px "Poppins";
       padding: 5px 15px;
       border-radius: 8px;
       border: 1px solid #E3E4F3;
@@ -294,7 +294,7 @@
   left: 50%; }
   .connect-wallet-info p {
     color: #FFB44D;
-    font: normal normal 300 13px/17px "Poppins", sans-serif;
+    font: normal normal 300 13px/17px "Poppins";
     margin-bottom: 0; }
   .connect-wallet-info .icon-info {
     margin-right: 10px; }
@@ -368,7 +368,7 @@
     flex-direction: column; }
 
   .privacy-policy p {
-    font: 300 13px/23px "Poppins", sans-serif; }
+    font: 300 13px/23px "Poppins"; }
 
   .connect-wallet-info {
     bottom: -90px; }
@@ -397,7 +397,7 @@
 .logout-modal-body h2 {
   color: #2E4276;
   text-align: center;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins";
   font-size: 24px;
   font-weight: 500;
   margin-top: 40px;
@@ -730,7 +730,7 @@
 
 .change-pass-modal .modal-dialog {
   max-width: 600px !important;
-  font-family: "Poppins", sans-serif; }
+  font-family: "Poppins"; }
   @media (max-width: 991px) {
     .change-pass-modal .modal-dialog {
       max-width: 96% !important; } }
