--- a/scss/common.scss
+++ b/scss/common.scss
@@ -928,10 +928,56 @@ button{
 }
 .table-no-data-h{
     min-height: 60vh;
+    @media(max-height: 1000px){
+        min-height: 50vh;
+    }
     @media($sm-991){
         min-height: 50vh;
     }
-    @media($sm-579){
-        min-height: 40vh;
+    @media($sm-767){
+        min-height: 30vh;
+    }
+}
+
+.action-btn-highlight{
+    position: relative;
+    animation: pulse 1s linear infinite;
+    &:after {
+        content: '';
+        position: absolute;
+        width: 28px;
+        height: 28px;
+        border: 4px solid #96e953;
+        border-radius: 50%;
+        display: inline-block;
+        box-sizing: border-box;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        animation: scaleUp 1s linear infinite;
+    }
+
+    @keyframes scaleUp {
+        0% {
+            transform: translate(-50%, -50%) scale(0)
+        }
+
+        60%,
+        100% {
+            transform: translate(-50%, -50%) scale(1)
+        }
+    }
+
+    @keyframes pulse {
+
+        0%,
+        60%,
+        100% {
+            transform: scale(1)
+        }
+
+        80% {
+            transform: scale(1.1)
+        }
     }
 }
