--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -75,6 +75,7 @@
             // background: rgba(0, 18, 184, 0.60);
             background: rgba(0, 18, 184, 0.11);
             filter: blur(137.35000610351562px);
+            display: none !important;
         }
         .pros-label-block{
             border-radius: 19px;
@@ -417,6 +418,7 @@
         background: rgba(0, 18, 184, 0.25);
         filter: blur(120.35000610351562px);
         z-index: -1;
+        display: none !important;
     }
     .app-img{
         max-width: 100%;
@@ -841,23 +843,28 @@
         width: 100%;
         background-position: center 3px;
         left: 0;
-        background-size: 60vw;
+        // background-size: 60vw;
         top: -100px;
+        background-size: auto 120px;
+        height: 70px;
     }
     .home-banner-sec {
         padding: 100px 0;
     }
     .home-banner-sec .home-banner-container::after{
         transform: none;
-        width: 100%;
+        width: 250px;
         right: 0;
-        height: 65%;
-        top: -20px;
+        top: 40%;
         bottom: auto;
-        background-size: 65vw;
+        // background-size: 65vw;
+
+        background-size: auto 160px;
+        height: 110px;
+        width: 250px;
     }
     .home-banner-sec .home-banner-cover .banner-card-cover{
-        padding-top: 100px;
+        padding-top: 65px;
     }
     .app-img-sec::before {
         height: 200px;
@@ -868,12 +875,18 @@
         height: 335px;
         top: -50px;
     }
-    .home-banner-sec .home-banner-container::after{
-        background-size: 75vw;
-        height: 60%;    
-        right: 6px;
-        top: 20px;  
+    .home-banner-sec .home-banner-cover .banner-card-cover {
+        padding-top: 55px;
     }
+    .home-banner-sec .home-banner-container::after{
+        top: 45%;
+    }
+    // .home-banner-sec .home-banner-container::after{
+    //     background-size: 75vw;
+    //     height: 60%;    
+    //     right: 6px;
+    //     top: 20px;  
+    // }
     .home-banner-sec .home-banner-cover .banner-card-wapper .banner-num-card h4 {
         font-size: 16px;
     }
@@ -883,9 +896,9 @@
     .home-banner-sec .home-banner-cover .btn-block .banner-btn{
         width: 100%;
     }
-    .home-banner-sec .home-banner-container::before{
-        background-size: 70vw;
-    }
+    // .home-banner-sec .home-banner-container::before{
+    //     background-size: 70vw;
+    // }
     .home-banner-sec .home-banner-cover .pros-label-block {
         font-size: 12px;
     }
@@ -920,17 +933,33 @@
 }
 @media(max-width: 420px){
     .home-banner-sec .home-banner-cover .banner-card-cover {
-        padding-top: 65px;
+        // padding-top: 30px;
     }
     .home-banner-sec .home-banner-cover .banner-card-wapper .banner-col{
         width: 100%;
     }
+    // .home-banner-sec .home-banner-container::after {
+    //     height: 50%;
+    // }
     .home-banner-sec .home-banner-container::after {
-        height: 50%;
+        top: 38%;
+        background-size: auto 135px;
+        height: 90px;
+        width: 190px;
     }
     
 }
-
+@media(max-width: 360px){
+    .home-banner-sec .home-banner-cover .banner-card-cover {
+        padding-top: 35px;
+    }
+    .home-banner-sec .home-banner-container::after {
+        top: 41%;
+        // background-size: auto 100px;
+        // height: 70px;
+        // width: 150px;
+    }
+}
 
 .brand-ambassidor{
     background: linear-gradient(150deg, rgba(78, 93, 181, 0.09) 1.44%, rgba(121, 140, 255, 0.00) 47.82%);
