--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1350,7 +1350,7 @@
       border-radius: 14px;
       border: 2px solid #A1BBFF;
       background: #fff;
-      padding: 36px 17px;
+      padding: 30px 15px;
       flex: 0 0 23%;
       display: flex;
       flex-direction: column;
@@ -1358,7 +1358,7 @@
       align-items: center; }
       @media (max-width: 1679px) {
         .statistics .statistics-blks-wrp .statistics-blks {
-          padding: 25px 17px; } }
+          padding: 22px 15px; } }
       @media (max-width: 1441px) {
         .statistics .statistics-blks-wrp .statistics-blks {
           flex: 0 0 30%; } }
@@ -1370,22 +1370,27 @@
         .statistics .statistics-blks-wrp .statistics-blks {
           flex: 0 0 100%; } }
       .statistics .statistics-blks-wrp .statistics-blks .blks-title {
+        min-height: 42px;
         color: #2966FF;
         text-align: center;
         font-family: "Poppins";
         font-size: 16px;
         font-weight: 500;
         line-height: normal;
-        margin-bottom: 36px; }
+        margin-bottom: 25px; }
         @media (max-width: 1679px) {
           .statistics .statistics-blks-wrp .statistics-blks .blks-title {
             font-size: 14px;
-            margin-bottom: 22px; }
+            margin-bottom: 10px; }
             .statistics .statistics-blks-wrp .statistics-blks .blks-title img {
               width: 15px; } }
         @media (max-width: 1441px) {
           .statistics .statistics-blks-wrp .statistics-blks .blks-title {
             margin-bottom: 10px; } }
+        @media (max-width: 1199px) {
+          .statistics .statistics-blks-wrp .statistics-blks .blks-title {
+            margin-bottom: 10px;
+            min-height: auto; } }
         @media (max-width: 991px) {
           .statistics .statistics-blks-wrp .statistics-blks .blks-title {
             margin-bottom: 10px; } }
