--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -1540,14 +1540,14 @@
             border-radius: 14px;
             border: 2px solid $static-blks-border;
             background: $static-blks-light-bg;
-            padding: 36px 17px;
+            padding: 30px 15px;
             flex: 0 0 23%;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             @media ($sm-1679){
-                padding: 25px 17px;
+                padding: 22px 15px;
             }
             @media ($sm-1441){
                 flex: 0 0 30%;
@@ -1560,22 +1560,27 @@
                 flex: 0 0 100%;
             }
             .blks-title{
+                min-height: 42px;
                 color: #2966FF;
                 text-align: center;
                 font-family: $font-primary;
                 font-size: 16px;
                 font-weight: 500;
                 line-height: normal;
-                margin-bottom: 36px;
+                margin-bottom: 25px;
                 @media ($sm-1679){
                     font-size: 14px;
-                    margin-bottom: 22px;
+                    margin-bottom: 10px;
                     img{
                         width: 15px;
                     }
                 }
                 @media ($sm-1441){
                     margin-bottom: 10px;
+                }
+                @media ($sm-1199){
+                    margin-bottom: 10px;
+                    min-height: auto;
                 }
                 @media ($sm-991){
                     margin-bottom: 10px;
