--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -411,7 +411,7 @@
     width: 26px;
     height: 26px;
     padding: 0;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-shrink: 0; }
@@ -426,7 +426,7 @@
     width: 18px;
     height: 26px;
     padding: 0;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-shrink: 0; }
