--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -535,7 +535,7 @@
                     width: 26px;
                     height: 26px;
                     padding: 0;
-                    display: inline-flex;
+                    display: flex;
                     align-items: center;
                     justify-content: center;
                     flex-shrink: 0;
@@ -554,7 +554,7 @@
                     width: 18px;
                     height: 26px;
                     padding: 0;
-                    display: inline-flex;
+                    display: flex;
                     align-items: center;
                     justify-content: center;
                     flex-shrink: 0;
