--- a/css/table.css
+++ b/css/table.css
@@ -122,7 +122,7 @@
     width: 26px;
     height: 26px;
     padding: 0;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-shrink: 0; }
@@ -137,7 +137,7 @@
     width: 18px;
     height: 26px;
     padding: 0;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     flex-shrink: 0; }
