--- a/scss/table.scss
+++ b/scss/table.scss
@@ -152,7 +152,7 @@
                     width: 26px;
                     height: 26px;
                     padding: 0;
-                    display: inline-flex;
+                    display: flex;
                     align-items: center;
                     justify-content: center;
                     flex-shrink: 0;
@@ -169,7 +169,7 @@
                     width: 18px;
                     height: 26px;
                     padding: 0;
-                    display: inline-flex;
+                    display: flex;
                     align-items: center;
                     justify-content: center;
                     flex-shrink: 0;
