--- a/css/common.css
+++ b/css/common.css
@@ -791,5 +791,25 @@ button {
     transform: scale(1); }
   80% {
     transform: scale(1.1); } }
+.ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels {
+  overflow: hidden;
+  overflow-x: auto; }
+  .ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels::-webkit-scrollbar {
+    width: 5px;
+    height: 8px; }
+  .ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background: #f8f6fa; }
+  .ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels::-webkit-scrollbar-thumb {
+    background: #ECDFF5;
+    border-radius: 3px; }
+  .ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels::-webkit-scrollbar-thumb:hover {
+    background: #dfc6f1; }
+  @media (max-width: 767px) {
+    .ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels {
+      max-width: 400px; } }
+  @media (max-width: 479px) {
+    .ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels {
+      max-width: 300px; } }
 
 /*# sourceMappingURL=common.css.map */
